--- a/XCSummary/Templates/ActivityTemplateWithImage.html
+++ b/XCSummary/Templates/ActivityTemplateWithImage.html
@@ -1,11 +1,7 @@
 <!-- Common Activity With Image -->
-<div style="margin-left: %2.2f%@; background-color: #F3F3F3; padding:2px; text-align: right; font-size:90%%">
-    <table style="width: 100%%">
-        <tr>
-            <td style="text-align: left;">%@ <div style="display:inline; color: grey">(%2.2f sec)</div> </td>
-            <td><img style="text-align: right; width: 600px; height: auto;" src="%@"></td>
-        </tr>
-    </table>
-</div>
-<!-- Separator -->
-<div style="margin:4px"></div>
+<li class="test test-action depth-%d">
+    <ul class="test-inline">
+        <li><pre>%@</pre> <div style="display:inline; color: grey">(%2.2f sec)</div></li>
+        <li class="test-inline-image"><img style="text-align: right; width: 50px; height: auto;" src="%@"></li>
+    </ul>
+</li>
