--- a/XCSummary/Templates/ActivityTemplateWithoutImage.html
+++ b/XCSummary/Templates/ActivityTemplateWithoutImage.html
@@ -1,10 +1,2 @@
-<!-- Common Activity Without Image -->
-<div style="margin-left: %2.2f%@; background-color: #F3F3F3; padding:2px; text-align: right; font-size:90%%">
-    <table style="width: 100%">
-        <tr>
-            <td style="text-align: left;">%@ <div style="display:inline; color: grey">(%2.2f sec)</div></td>
-        </tr>
-    </table>
-</div>
-<!-- Separator -->
-<div style="margin:4px"></div>
+<!-- Common Activity With Image -->
+<li class="test test-action depth-%d"><pre>%@</pre> <div style="display:inline; color: grey">(%2.2f sec)</div></li></li>
