--- a/XCSummary/Templates/SummaryTemplate.html
+++ b/XCSummary/Templates/SummaryTemplate.html
@@ -1,5 +1,5 @@
 <!-- Test Summary -->
-<div style="margin-left: 10px; background-color: #eeeeee; padding:4px; text-align: right; font-size:20px">
+<div style="background-color: #eeeeee; padding:4px; text-align: right; font-size:20px">
     <table style="width: 100%">
         <tr>
             <td style="text-align: left;padding:10px;">Test Results:</td>
@@ -17,5 +17,4 @@
     </table>
 </div>
 
-<!-- Separator -->
-<div style="margin:10px"></div>
+<ul>
